tests/expectations/compiler/constants/reassignment_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372002]: Cannot assign to const variable `HELLO`
    --> compiler-test:4:11
     |
   4 |     const HELLO: u8 = 0u8;
     |           ^^^^^
"""]
